# guestrace

./: .gitignore  AUTHORS  Makefile.am  PERFORMANCE  README  autogen.sh  configure.ac  libguestrace-0.0.pc.in
distro/: guestrace.spec
doc/: Makefile.am
src/: Makefile.am  early-boot.c  early-boot.h  functions-linux.c  functions-linux.h  functions-windows.c  functions-windows.h  functions_linux.c  functions_linux.h  functions_windows.c  functions_windows.h  generate-windows.py  generated-linux.c  generated-linux.h  generated-windows.c  generated-windows.h  generated_linux.c  generated_linux.h  gt-private.h  gt-rekall-private.c  gt-rekall-private.h  gt-rekall.c  gt-rekall.h  gt.c  gt.h  guestrace-private.h  guestrace.c  guestrace.h  rekall-private.h  rekall.c  rekall.h  state-stack.c  state-stack.h  state-stacks.c  state-stacks.h  syscall_enum.h  syscalls.txt  test-pendantic.c  test-segv.c  trace-syscalls.c  (+8 more)
tools/: Makefile.am  gen-syscall-code-linux  gen-syscall-code-windows  get_syscall_info.py
